# Adventurator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  alyrae.md  config.toml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: implementation_plan.md
migrations/: env.py
migrations/versions/: 47831d6a93c3_init_tables.py
scripts/: aicat.py  build_implementation_plan.py  register_commands.py
src/Adventorator/: app.py  config.py  db.py  discord_schemas.py  llm.py  logging.py  models.py  repos.py  responder.py  schemas.py
src/Adventorator/rules/: checks.py
src/Adventurator/: app.py  crypto.py  models.py  responder.py
src/Adventurator/rules/: dice.py
tests/: conftest.py  test_advantage.py  test_checks.py  test_config_settings.py  test_crypto.py  test_dice.py  test_interactions.py  test_interactions_defer.py  test_ollama_chat_nostream.py  test_repos.py  test_transcript.py  tests_interactions_ping.py
