[project]
name = "Adventorator"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","N","B"]

[tool.pytest.ini_options]
addopts = "-q --cov=Adventorator --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

